--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Slate theme
-description: Slate is a theme for GitHub Pages.
+title: NIMDA Group Ltd.
+description: Published with GitHub Pages.
 show_downloads: true
-google_analytics:
+google_analytics: true
 theme: jekyll-theme-slate
